# CB2A-Tello

./: CMakeLists.txt  README.md  package.xml
Agent-tellopy/: build.gradle  uav1.asl
Agent-tellopy/src/agt/: uav1.yaml
demoAgent/: uav1.asl
demoAgent-Rotating/: uav1.asl
demoAgent-Twist/: uav1.asl
demoAgent-Twist/src/agt/: uav1.yaml
demoAgent-Twist/src/java/: MyRosMaster.java
demoAgent/src/agt/: uav1.yaml
py_pubsub/: subscriber_member_function.py
scripts/: djitellopy.py
