<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>tello_jason</name>
    <version>0.1.0</version>
    <description>Tello Jason</description>

    <maintainer email="iagosilvestre2004@gmail.com">Iago Silvestre</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/tello_ros.git</url>
    <url type="bugtracker">https://github.com/clydemcqueen/tello_ros/issues</url>

    <author>Iago Silvestre</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>tello_msgs</depend>

    <exec_depend>gazebo_ros_pkgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>

</package>
